--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,13 +14,13 @@
     <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine-html.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="spec/SpecHelper.js"></script>
-    <script type="text/javascript" src="spec/jquery.lightModal_spec.js"></script>
+    <script type="text/javascript" src="spec/SpecHelper.js?"></script>
+    <script type="text/javascript" src="spec/jquery.lightModal_spec.js?"></script>
 
     <!-- include source files here... -->
-	<script type="text/javascript" src="lightModal/jquery.lightModal.js"></script>
+	<script type="text/javascript" src="lightModal/jquery.lightModal.js?"></script>
 
-  <link rel="stylesheet" href="lightModal/lightModal.css" />
+  <link rel="stylesheet" href="lightModal/lightModal.css?" />
   <style>
     #modal_1{
       width: 888px;
